[fix] 修改首页显示效果

--- a/source/_posts/创建数组的正确姿势.md
+++ b/source/_posts/创建数组的正确姿势.md
@@ -20,6 +20,7 @@ categories: 前端
 
 在 JavaScript 中，数组本质上也是对象，是对象的一种特殊形式。数组索引实际上和碰巧是整数名的对象属性没有什么差别，不过数组的实现是经过了优化的，通过数组索引访问数组元素比访问一般对象的属性要快的多。规定数组索引的范围是 `0 ~ 4294967294 （2 ^ 32 - 2）`,  所有的索引都是属性名， 但是只有在这个范围内的整数才是数组索引，数组索引会触发数组的特殊行为。
 
+<!-- more -->
 
 # 数组的创建方式
 
