[fix] 添加笔记内容

--- a/source/_posts/2018-06-15-JS笔记——BOM对象.md
+++ b/source/_posts/2018-06-15-JS笔记——BOM对象.md
@@ -2,6 +2,8 @@
 title: JS笔记——BOM对象
 date: 2018-06-15 13:40:06
 tags:
+	- JavaScript
+categories: 前端
 ---
 
 
@@ -80,6 +82,8 @@ delete window.b; // true
 
 ### 窗口位置
 
+#### screenRight，screenTop, screenX, screenY
+
 跨浏览器取得窗口左边和上边的位置：
 
 ``` js
@@ -88,6 +92,49 @@ var leftPos = (typeof window.screenLeft === 'number') ?
 var topPos = (typeof window.screenTop === 'number') ? 
 	window.screenTop : window.screenY;
 ```
+
+在 IE, Safari, Opera, Chrome 中可以根据 screenLeft 和 screenTop 这两个属性值获得浏览器左边和上边的值；Firefox 则是根据 screenX 和 screenY 来判断。
+
+> 注： Oprea 虽然也支持 screenX 和 screenY，但是与 screenLeft 和 screenTop 并不对应。因此建议不要使用。
+
+然鹅，在实际的使用上，还存在着问题，导致我们在跨浏览器的前提下，根本不能拿到窗口左边和上边的坐标。
+
+不过我们可以通过下边两个方法将窗口精准的移动到一个新的位置：moveTo() 和 moveBy()。
+
+#### moveTo(), moveBy()
+
+* moveTo()
+
+``` js 
+// x,y 表示新位置坐标值
+window.moveTo(x, y);
+```
+
+* moveBy()
+
+``` js
+// 表示水平和垂直方向需要移动的像素
+window.moveBy(a, b)
+```
+
+然鹅，这两个方法有可能会被浏览器禁用, 并且这两个方法只能对最外层window对象使用，不适用于框架。
+
+### 窗口大小
+
+* innerWidth
+* innerWidth
+* outerHeight
+* outerWidth
+
+
+* resizeTo()
+* resizeBy()
+
+### 导航和打开窗口
+
+window.open()
+
+#### 弹出窗口
 
 
 
