--- a/source/_posts/2018-06-26-微信小程序-一-简介.md
+++ b/source/_posts/2018-06-26-微信小程序-一-简介.md
@@ -17,7 +17,10 @@ categories: 前端
 ### 需要了解的基础知识
 
 * HTML，CSS，JavaScript
-* 最好使用过框架，如React、Vue，因为小程序的语法更像是React和Vue语法的结合，如果没有了解过也不用慌，直接看小程序的语法即可
+* 最好使用过框架，如React、Vue
+
+	* 小程序的语法更像是React和Vue语法的结合
+	* 小程序中的生命周期和React中的生命周期有些类似（Vue不太清楚，我没有使用过）
 
 <!--More-->
 
