--- a/source/_posts/2018-06-26-微信小程序-一-简介.md
+++ b/source/_posts/2018-06-26-微信小程序-一-简介.md
@@ -49,7 +49,9 @@ categories: 前端
 ### WXML - 页面
 结合基础组件，事件系统，构建页面结构，进行快速开发。
 
-注意功能：
+小程序提供了很多的基础组件，可以像搭积木一样快速的搭建页面结构。
+
+主要功能：
 
 * 数据绑定
 * 列表渲染
@@ -59,10 +61,11 @@ categories: 前端
 * 引用
 
 ### WXS - 小程序脚本语言
+
 这是小程序的自身提供的一套脚本语言，和JavaScript不一样，可以结合 WXML 构建页面的结构。
 
 ### WXSS - 样式
-在CSS 的基础上进行了扩展：
+在 CSS 的基础上进行了扩展：
 
 * 尺寸单位
 	* rpx 
@@ -70,22 +73,23 @@ categories: 前端
 	* @import 
 
 ### JavaScript脚本 - 处理用户交互逻辑
-结合小程序提供的事件系统，API 进行微信小程序的功能开发。
+
+结合小程序提供的事件系统、AP，进行微信小程序的功能开发。
 
 在JavaScript基础上的修改：
 
 * 增加 App 和 Page 方法，进行程序和页面的注册
 * 增加方法获取App实例和页面栈，控制页面路由跳转
-* 提供API进行功能开发
+* 提供微信API进行功能开发
 * 页面有独立作用域，提供模块化能力
 
 |   主要    |   详情   |
 | -----   | --------   | 
-| 注册程序 | App() |
-| 注册页面 | Page() |
+| 注册程序 | App() ，对应小程序实例|
+| 注册页面 | Page()，对应页面实例 |
 | 场景值 | 暂时还不清楚用处？？？ |
-| 路由 | 页面栈 |
-| 模块化 | 作用域；export/require |
+| 路由 | 通过页面栈实现 |
+| 模块化 | 作用域，export/require |
 | API | 微信原生，调用微信提供的功能 |
 
 ## 总结
