--- a/source/_drafts/微信小程序-踩坑.md
+++ b/source/_drafts/微信小程序-踩坑.md
@@ -12,21 +12,23 @@ tags:
 
 wxParse的使用：
 
-* 下载，然后将文件夹wxParse拷贝到项目目录，和pages目录同级
-* app.wxss引入wxParse样式文件
+1. 下载，然后将文件夹wxParse拷贝到项目目录，和pages目录同级
+2. app.wxss引入wxParse样式文件
 
 	``` css
 	@import 'wxParse/wxParse.wxss';
 	```
 	
-* 通过调用WxParse.wxParse方法来设置html内容
+3. 通过调用WxParse.wxParse方法来设置html内容
+
+	WxParse.wxParse(bindName , type, data, target, imagePadding)
 
 	``` js
 	let wxparse = require("../../wxParse/wxParse.js");
 	wxparse.wxParse('detailContent', 'html', res.data.body, that, 5);
 	```
 	
-* 在页面中引用模板
+4. 在页面中引用模板
 
 	``` js
 	<import src="../../wxParse/wxParse.wxml"/>
